# stock-advisor

./: .env.example  .gitignore  DESIGN.md  Dockerfile  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  railway.toml
alembic/: env.py
app/: config.py  main.py
app/core/: decision_engine.py  security.py
app/ingestion/: anonymizer.py  patreon_parser.py
app/llm/: orchestrator.py
app/models/: base.py  tables.py
app/services/: earnings_service.py  embedding_service.py  price_service.py
backend/: log_config.json  pyproject.toml
backend/alembic/versions/: 001_v1_schema_enhancements.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  chat.py
backend/app/core/: security.py
backend/app/ingestion/: doc_parser.py  excel_parser.py  patreon_parser.py
backend/app/jobs/: distill_principles.py
backend/app/llm/: orchestrator.py  prompts.py  retry.py
backend/app/models/: tables.py
backend/app/services/: earnings_service.py  embedding_service.py  price_service.py  rate_limiter.py
backend/scripts/: distill_principles.py  ingest_doc.py  ingest_excel.py  migrate.py  rephrase_existing.py
backend/tests/: test_unit.py
frontend/: Dockerfile  app.py  pyproject.toml
scripts/: ingest_excel.py  ingest_r2_doc.py
